[workspace]

members = [
    "modules/netcode",
    "modules/game",
    "modules/smash",
    "modules/jigsaw",
    "modules/pcommon",
    "modules/bibble",
    "modules/becs",
    "modules/bib_utils",
    "modules/bibble_data",
]

#[profile.release]
#debug = true
## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html