[package]
name = "becs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "*"
log = { version = "*", features = ["max_level_debug", "release_max_level_info"] }
byteorder = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
rdxsort = "0.3.0"
serde-big-array = {path = "C:\\_C_\\Home\\Produce\\Code\\Projects\\Rust\\OtherPeeps\\serde-big-array"}